--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+		"dev": "nodemon server.js",
+		"build": "node server.js",
+		"lint": "eslint server.js",
+		"lint:fix": "npm run lint -- --fix",
+		"prettier": "npx prettier server.js --check",
+		"prettier:fix": "npm run prettier -- --write",
+		"format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "multer": "^1.4.4"
   },
   "repository": {
     "type": "git",
@@ -19,5 +27,11 @@
     "node",
     "express"
   ],
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "nodemon": "^2.0.15",
+    "prettier": "2.6.0"
+  },
   "license": "MIT"
 }
